guest check in/out features are added.